# streamring-detection

./: README.md  setup_env.sh
streamring/: .env.example  .gitignore  README.md  REPRODUCIBILITY.md  pipeline.py  pyproject.toml  requirements.txt  run_all.sh
streamring/configs/: default.yaml  local.example.yaml
streamring/experiments/: accuracy_at_latency.py  allout_v3.py  augmentation_ablation.py  baselines.py  case_study_visualization.py  compute_rdt.py  generate_final_figures_v2.py  graphsage_tier3.py  lstm_tier3.py  statistical_tests.py  streaming_simulation.py  temporal_baselines.py  tier2_diagnostic.py
streamring/paper/: main.tex  references.bib
streamring/paper/tables/: tab_augmentation.tex  tab_baselines.tex  tab_dataset.tex  tab_rdt.tex  tab_streaming.tex  tab_tiers.tex
streamring/results/tables/: ablation_results.json  accuracy_at_latency.json  augmentation_ablation.json  augmentation_table.tex  baseline_results.json  baseline_runtime.tex  baseline_table.tex  case_study_meta.json  cross_period_results.json  graphsage_tier3_results.json  label_scarcity_results.json  lstm_tier3_results.json  lstm_tier3_streaming_results.json  paper_tables.tex  rdt_results.json  roc_data.json  scalability_results.json  significance_summary.tex  statistical_tests.json  streaming_results.json  temporal_baseline_results.json  (+5 more)
streamring/scripts/: build_graphs.sh  extract_data.sh  generate_patterns.py
streamring/tests/: test_lstm_classifier.py  test_lstm_tier3_experiment.py  test_metrics.py  test_results_integrity.py  test_streamring_regression.py  test_subgnn.py
(+24 files in other folders)
