[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "streamring"
version = "0.1.0"
description = "Real-time fraud ring detection on Ethereum Classic via cascading graph neural networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "dgl>=1.1.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0,<3.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.4",
    "scipy>=1.10.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ogb>=1.3.6",
]

[project.optional-dependencies]
etl = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "ethereum-etl==2.4.2",
    "web3==5.31.4",
    "pyarrow>=12.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:pytest_ethereum"]
